# Rachel

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  DEPLOY_DOCKER.md  Dockerfile  README.md  alembic.ini  api.py  bot.py  client.py  db.py  docker-compose.yml  dockerfile  prompts.py  pyproject.toml  requirements.txt  template.env
alembic/: env.py
alembic/versions/: 0001_initial.py  39525caf8b08_use_telegram_message_id_as_pk.py  84176aa2e975_rename_message_id_to_telegram_message_id.py  8569e903f7f4_merge_conflicting_heads.py  a1b2c3d4e5f6_add_summarizer_system_prompt.py  a4f7c2e9b1d3_rename_summary_mood_to_chat_state.py  a7c1f2e9b3d4_add_user_facts_preferences.py  b2c3d4e5f6a7_rename_system_prompt_table_and_column.py  b8d3f6a1c2e9_rename_summary_to_summary_mood.py  c17982a24b3a_add_users_table_and_sender_user_id.py  c9e4a7b2d1f3_add_user_profile_jsonb.py  d4e8f1a2b3c6_add_schedule_activities.py  e5f9a2b4c7d8_add_history_reason.py  f1d2c3b4a5e6_drop_user_facts_column.py  f3a9e1b2c8d7_add_personality_traits.py
app/: __init__.py  api.py  bot.py  calander.py  client.py  config.py  database.py  db.py  main.py  models.py  prompts.py  repository.py  schedule_data.py  utils.py
app/routers/: admin.py
app/services/: gemini.py  graphiti.py  llm.py  memory.py  metrics.py  userfacts.py  worldview.py
app/static/: index.html
app/telegram/: bot.py  client.py
rachel_adk_agent/: agent.py  db_utils.py
scripts/: add_worldview_fact.py  clear_graph.py  draw_graphs.py  ingest_user_facts_md.py  ingest_worldview_md.py  login.py
